kustomize/overlay/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw4-test
  labels:
    app: frontapp
spec:
  rules:
  - http:
      paths:
      - path: /frontapp
        pathType: Prefix
        backend: 
          service:
            name: frontapp
            port:
              number: 8080
