kustomize/overlay/test/patch_backapp_var.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backapp
  labels:
    app: backapp
    homework: backapp
spec:
  selector:
    matchLabels:
      app: backapp
      homework: backapp
  template:
    spec:
      containers:
      - name: backapp
        env:
        - name: ENVBACKAPP
          value: ""
