kustomize/overlay/test/patch_frontapp_var.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontapp
  labels:
    app: frontapp
    homework: frontapp
spec:
  template:
    spec:
      containers:
      - name: frontapp
        env:
        - name: ENVFRONTAPP
          value: ""
