kustomize/overlay/test/patch_springboothead_backapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backapp
  labels:
    app: backapp
    homework: backapp
spec:
  template:
    spec:
      containers:
      - name: backapp
        env:
        - name: JAVA_OPTS
          value: -Dspring.main.banner-mode=on
