kustomize/overlay/test/patch_springboothead_frontapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontapp
  labels:
    app: frontapp
    homework: frontapp
spec:
  template:
    spec:
      containers:
      - name: frontapp
        env:
        - name: JAVA_OPTS
          value: ""
